[package]
name = "libusb-async"
version = "0.5.1"
authors = ["David Cuddeback <david.cuddeback@gmail.com>", "Simon Berg <ksb@fluffware.se>"]
description = "Rust library for accessing USB devices."
license = "MIT"
homepage = "https://github.com/dcuddeback/libusb-rs"
repository = "https://github.com/dcuddeback/libusb-rs.git"
documentation = "http://dcuddeback.github.io/libusb-rs/libusb/"
readme = "README.md"
keywords = ["usb", "libusb", "hardware", "bindings"]

[dependencies]
bit-set = "0.5"
libusb-sys = "0.2"
libc = "0.2"

[dev-dependencies]
regex = "0.1"
futures = "0.3"
